projetGL/src/test/deca/context/invalid/provided/invalide_05_unary_minus_str.deca
// Description : Test l'operation UNAIRE - EXPR pour un boolean
// Resultat : 
// ERROR dans unary operation // A MODIF!! 

{
    boolean bool = true;
    bool = - bool;
}